--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,11 @@
-# Compiled class file
+/target
+*/target
+.settings/
+.project
+.classpath
+.idea
 *.class
-
-# Log file
+*.iml
 *.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+.gradle
+/build
