增加图片验证码OCR识别

--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -2,14 +2,32 @@
   "COMMAND_INTERVAL": 125,
   "TIMEOUT_PAGE_LOAD": 20,
   "CHROME_DRIVER_PATH": "C:\\data\\auto\\chromedriver.exe",
-  // "FIREFOX_DRIVER_PATH": "C:\\data\\auto\\geckodriver.exe",
-  "JIRA_URL": "http://xxx.jira.com/",
-  "JIRA_USER": "luozhuowei",
-  "JIRA_PASS": "123456",
-  "JIRA_ISSUE_PROJECT": "xxx",
-  "JIRA_ISSUE_CATEGORY": "缺陷",
-  "JIRA_ISSUE_SEASON": "xxx",
-  "JIRA_ISSUE_STAGE": "MAT",
-  "JIRA_ISSUE_TYPE": "功能问题",
-  "JIRA_ISSUE_ASSIGNEE": "luozhuowei"
+  "FIREFOX_DRIVER_PATH": "C:\\data\\auto\\geckodriver.exe",
+  "JIRA": {
+    "url": "http://xxx.jira.com/",
+    "username": "luozhuowei",
+    "password": "123456",
+    "issueProject": "xxx",
+    "issueCategory": "缺陷",
+    "issueSeason": "xxx",
+    "issueStage": "MAT",
+    "issueType": "功能问题",
+    "issueAssignee": "luozhuowei"
+  },
+  "ocr_baidu": {
+    "appId": null,
+    "apiKey": null,
+    "secretKey": null,
+    "params": {
+      "paragraph": false,
+      "detect_direction": true,
+      "recognize_granularity": "small"
+    }
+  },
+  "ocr_chaojiying": {
+    "user": null,
+    "pass": null,
+    "softid": null,
+    "codetype": "1902"
+  }
 }
