支持打包成可执行jar

--- a/pom.xml
+++ b/pom.xml
@@ -65,10 +65,51 @@
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.21</version>
         </dependency>
+        <!-- opencv -->
+        <dependency>
+            <groupId>org.opencv</groupId>
+            <artifactId>opencv-java</artifactId>
+            <version>4.5.1</version>
+            <!--<scope>system</scope>
+            <systemPath>${basedir}/opencv/opencv-java-4.5.1.jar</systemPath>-->
+        </dependency>
     </dependencies>
 
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <filtering>false</filtering>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>false</filtering>
+            </resource>
+        </resources>
         <plugins>
+            <!-- 先clean把jar弄到本地仓库 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-install-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>opencv-binary</id>
+                        <phase>clean</phase>
+                        <configuration>
+                            <file>${basedir}/opencv/opencv-java-4.5.1.jar</file>
+                            <repositoryLayout>default</repositoryLayout>
+                            <groupId>org.opencv</groupId>
+                            <artifactId>opencv-java</artifactId>
+                            <version>4.5.1</version>
+                            <packaging>jar</packaging>
+                            <generatePom>true</generatePom>
+                        </configuration>
+                        <goals>
+                            <goal>install-file</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -77,6 +118,71 @@
                     <target>1.8</target>
                     <encoding>UTF-8</encoding>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.3</version>
+                <configuration>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <mainClass>cn.veasion.auto.Development</mainClass>
+                        </manifest>
+                    </archive>
+                    <excludes>
+                        <exclude>common/</exclude>
+                        <exclude>dependency/</exclude>
+                        <exclude>files/</exclude>
+                        <exclude>include/</exclude>
+                        <exclude>script/</exclude>
+                        <exclude>*.js</exclude>
+                        <exclude>*.bat</exclude>
+                        <exclude>*.json</exclude>
+                        <exclude>*.crx</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+            <!--- 可执行jar -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <finalName>automation</finalName>
+                    <appendAssemblyId>false</appendAssemblyId>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <!--<descriptors>
+                        <descriptor>${basedir}/assembly.xml</descriptor>
+                    </descriptors>-->
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <mainClass>cn.veasion.auto.Development</mainClass>
+                        </manifest>
+                        <manifestEntries>
+                            <Class-Path>.</Class-Path>
+                        </manifestEntries>
+                        <addMavenDescriptor>false</addMavenDescriptor>
+                    </archive>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
